--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ h1 {
     text-align: center;
 }
 
+.mt-1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
 body {
     background-color:bisque;
+}
+
+.sidebar {
+    font-family:'Times New Roman', Times, serif;
+    font-weight: bold;
 }
