--- a/style.css
+++ b/style.css
@@ -19,4 +19,5 @@ body {
 .list-group-data {
     font-family:'Times New Roman', Times, serif;
     font-weight: bold;
+    text-emphasis-color: red;
 }
